Analytics can now be refreshed from w/in the dashboard or w/in the My Analyses page. Home page also styled

--- a/analytics/static/styles/my_analyses.css
+++ b/analytics/static/styles/my_analyses.css
@@ -70,4 +70,5 @@
   border: 1px solid currentColor;
   background-color: var(--color-secondary);
   color: var(--color-primary);
+  text-decoration: none !important;
 }
