--- a/analytics/templates/analytics/dashboard_developers.html
+++ b/analytics/templates/analytics/dashboard_developers.html
@@ -108,7 +108,7 @@
         </div>
       </div>
     </div>
-    <div class="activity-card">
+    <div class="small-activity-card">
         <!--graph -->
         <div class="ci-bar-chart-container">
           <canvas id="ciBarChart" width="400" height="200"></canvas>
