--- a/analytics/static/styles/my_analyses.css
+++ b/analytics/static/styles/my_analyses.css
@@ -1,4 +1,4 @@
-@import url('../css/variables.css');
+@import url('variables.css');
 /* Container for all cards */
 .analysis-list {
   display: flex;
