--- a/analytics/templates/analytics/base.html
+++ b/analytics/templates/analytics/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Analytics Dashboard{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/index.css' %}">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
