Adjusting miner script to store url for repo. Additionaly, changed color of a graphs text

--- a/analytics/templates/analytics/dashboard.html
+++ b/analytics/templates/analytics/dashboard.html
@@ -533,7 +533,7 @@
             const skippedCount = totalCiRuns - successCount - failedCount
             //const barColor = styles.getPropertyValue("--color-secondary").trim();
             const colorSecondary = getComputedStyle(document.documentElement)
-              .getPropertyValue('--color-secondary')
+              .getPropertyValue('--color-secondary-alt')
               .trim();
 
 
